syntax = "proto3";

package ensync;

option java_multiple_files = true;
option java_package = "io.opensink.master.grpc.ensync";
option java_outer_classname = "EnSyncProto";

// Main EnSync service for client communication
service EnSyncService {
  // Connection & Authentication
  rpc Connect(ConnectRequest) returns (ConnectResponse);
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  
  // Message Publishing
  rpc PublishMessage(PublishMessageRequest) returns (PublishMessageResponse);
  
  // Message Subscription - Returns a stream of messages
  rpc Subscribe(SubscribeRequest) returns (stream MessageStreamResponse);
  rpc Unsubscribe(UnsubscribeRequest) returns (UnsubscribeResponse);
  
  // Message Management
  rpc AcknowledgeMessage(AcknowledgeRequest) returns (AcknowledgeResponse);
  rpc DeferMessage(DeferRequest) returns (DeferResponse);
  rpc DiscardMessage(DiscardRequest) returns (DiscardResponse);
  rpc ReplayMessage(ReplayRequest) returns (ReplayResponse);
  
  // Flow Control
  rpc PauseMessages(PauseRequest) returns (PauseResponse);
  rpc ContinueMessages(ContinueRequest) returns (ContinueResponse);
}

// Connection Messages
message ConnectRequest {
  string access_key = 1;
}

message ConnectResponse {
  bool success = 1;
  string client_id = 2;
  string client_hash = 3;
  map<string, string> server_config = 4;
  string error_message = 5;
}

message HeartbeatRequest {
  string client_id = 1;
}

message HeartbeatResponse {
  bool success = 1;
}

// Message Publishing Messages
message PublishMessageRequest {
  string client_id = 1;
  string message_name = 2;
  string payload = 3;
  string delivery_to = 4;
  string metadata = 5;
  optional string payload_metadata = 6;
}

message PublishMessageResponse {
  bool success = 1;
  string message_idem = 2;
  string error_message = 3;
}

// Message Subscription Messages
message SubscribeRequest {
  string client_id = 1;
  string message_name = 2;
}

message UnsubscribeRequest {
  string client_id = 1;
  string message_name = 2;
}

message UnsubscribeResponse {
  bool success = 1;
  string message = 2;
}

message MessageStreamResponse {
  string message_idem = 1;
  string message_name = 2;
  string payload = 3;
  int64 partition_block = 4;
  string metadata = 5;
  string sender = 6;
}

// Message Management Messages
message AcknowledgeRequest {
  string client_id = 1;
  string message_idem = 2;
  string message_name = 3;
  int64 partition_block = 4;
}

message AcknowledgeResponse {
  bool success = 1;
  string message = 2;
}

message DeferRequest {
  string client_id = 1;
  string message_idem = 2;
  string message_name = 3;
  int64 delay_ms = 4;
  int32 priority = 5;
  string reason = 6;
}

message DeferResponse {
  bool success = 1;
  string message = 2;
  int64 delivery_time = 3;
}

message DiscardRequest {
  string client_id = 1;
  string message_idem = 2;
  string message_name = 3;
  string reason = 4;
}

message DiscardResponse {
  bool success = 1;
  string message = 2;
}

message ReplayRequest {
  string client_id = 1;
  string message_idem = 2;
  string message_name = 3;
}

message ReplayResponse {
  bool success = 1;
  string message = 2;
  string message_data = 3;
}

// Flow Control Messages
message PauseRequest {
  string client_id = 1;
  string message_name = 2;
  string reason = 3;
}

message PauseResponse {
  bool success = 1;
  string message = 2;
}

message ContinueRequest {
  string client_id = 1;
  string message_name = 2;
}

message ContinueResponse {
  bool success = 1;
  string message = 2;
}
